wk_taa_taaqa/src/objects/APTS_Promotion_Detail__c.object
<CustomObject>
    <description>Detail object for Promotion contains pricelist, pricegroup and discount information</description>
    <fields>
        <fullName>APTS_Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Promotion Details</relationshipLabel>
        <relationshipName>Promotion_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Group for Promo Code</description>
        <label>Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Promotion Details</relationshipLabel>
        <relationshipName>Promotion_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Promotion__c</fullName>
        <label>Promotion</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Promotion__c.Price_List__r.Id</field>
                <operation>equals</operation>
                <valueField>Promotion__c.Quote__r.Apttus_QPConfig__PriceListId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Promotion Details</relationshipLabel>
        <relationshipName>Promotion_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Promotion Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRDTL-{0000}</displayFormat>
        <label>Promotion Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>